# redis-rag-chat-dotnet

./: .gitmodules  README.md  docker-compose.yml
backend/: Dockerfile  Program.cs  appsettings.json  sk-webapi.csproj
backend/Controllers/: DocumentsController.cs
backend/Model/: Ask.cs  ChatMessage.cs
backend/Services/: CompletionService.cs  ICompletionService.cs  UserIntentExtractionService.cs
backend/plugins/: TimePlugin.cs
dotnet/: .gitignore  DocumentInsertionRequest.cs  IndexSetupService.cs  Program.cs  QueryConfiguration.cs  StartupService.cs  TokenUtil.cs  appsettings.json  sk-webapi.csproj  sk-webapi.http
dotnet/Controllers/: ChatController.cs
dotnet/Model/: Beer.cs
dotnet/Properties/: launchSettings.json
dotnet/Services/: ChatMessageService.cs  CompletionService.cs  IChatMessageService.cs  ISummarizationService.cs  IUserIntentExtractionService.cs  SummarizationService.cs  UserIntentExtractionService.cs
dotnet/Tokenizers/: AllMiniLML6V2Tokenizer.cs  AllMiniLml6V2EmbeddingGenerator.cs  (+4 more)
frontend/: package-lock.json  package.json
kernel-memory/: .gitignore  Dockerfile  README.md  appsettings.Development.Template.json  docker-compose.yml  entrypoint.sh
python/webapi/: .env.sample  .gitignore  README.md  pyproject.toml
python/webapi/skills/utility/chat/: config.json  skprompt.txt
python/webapi/skills/utility/intent/: config.json  skprompt.txt
python/webapi/skills/utility/summarize/: config.json  skprompt.txt
python/webapi/webapi/: constants.py  main.py  models.py  text_extractor.py
scripts/: setup_beers.sh  upload.bash  upload.sh
(+19 files in other folders)
