[tool.poetry]
name = "webapi"
version = "0.1.0"
description = ""
authors = ["slorello89 <steve.lorello@redis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
python-dotenv = "^1.0.0"
semantic-kernel = "^0.4.5.dev0"
pydantic = ">2"
requests = "^2.31.0"
python-multipart = "^0.0.6"
pypdf2 = "^3.0.1"

[tool.poetry.scripts]
start = "webapi.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
